# INFOTECS1

./: CMakeLists.txt  Readme.md
include/: journal_writer.h
src/: journal_writer.cpp  logger.cpp  main.cpp
